CA: Endpoint table and breadcrumb overflow fix

--- a/src/assets/stylesheets/_basics.less
+++ b/src/assets/stylesheets/_basics.less
@@ -1,26 +1,26 @@
 @font-face {
-  font-family: 'entypo';
-  src: url('//staticcdn.referralsaasquatch.com/fonts/entypo/entypo.eot');
-  src: url('//staticcdn.referralsaasquatch.com/fonts/entypo/entypo.eot?#iefix')
-      format('embedded-opentype'),
-    url('//staticcdn.referralsaasquatch.com/fonts/entypo/entypo.woff')
-      format('woff'),
-    url('//staticcdn.referralsaasquatch.com/fonts/entypo/entypo.ttf')
-      format('truetype'),
-    url('//staticcdn.referralsaasquatch.com/fonts/entypo/entypo.svg#entypo')
-      format('svg');
+  font-family: "entypo";
+  src: url("//staticcdn.referralsaasquatch.com/fonts/entypo/entypo.eot");
+  src: url("//staticcdn.referralsaasquatch.com/fonts/entypo/entypo.eot?#iefix")
+      format("embedded-opentype"),
+    url("//staticcdn.referralsaasquatch.com/fonts/entypo/entypo.woff")
+      format("woff"),
+    url("//staticcdn.referralsaasquatch.com/fonts/entypo/entypo.ttf")
+      format("truetype"),
+    url("//staticcdn.referralsaasquatch.com/fonts/entypo/entypo.svg#entypo")
+      format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'star';
-  src: url('../fonts/GothamRounded-Medium.eot');
-  src: url('../fonts/GothamRounded-Medium.eot?#iefix')
-      format('embedded-opentype'),
-    url('../fonts/GothamRounded-Medium.woff') format('woff'),
-    url('../fonts/GothamRounded-Medium.ttf') format('truetype'),
-    url('../fonts/GothamRounded-Medium.svg#star') format('svg');
+  font-family: "star";
+  src: url("../fonts/GothamRounded-Medium.eot");
+  src: url("../fonts/GothamRounded-Medium.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/GothamRounded-Medium.woff") format("woff"),
+    url("../fonts/GothamRounded-Medium.ttf") format("truetype"),
+    url("../fonts/GothamRounded-Medium.svg#star") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -86,7 +86,7 @@ a:hover {
 
 // Monospace spans are used for URLs and other pseudo-code like blocks
 .docs-monospace {
-  font-family: Monaco, Consolas, 'Lucida Console', monospace;
+  font-family: Monaco, Consolas, "Lucida Console", monospace;
   font-size: 12px;
   text-align: -webkit-left;
   // LV: Removed to fix https://docs.referralsaasquatch.com/api/errors/
@@ -185,6 +185,12 @@ a:hover {
     &.small {
       padding-bottom: 4px; // Alignment fix
     }
+  }
+
+  .mm-navbar .mm-breadcrumbs {
+    // Overflow fix
+    overflow-x: hidden !important;
+    display: block;
   }
 }
 
@@ -320,7 +326,7 @@ h4,
 h5,
 h6,
 body {
-  font-family: 'proxima-nova', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .form-search .input-append {
@@ -337,9 +343,8 @@ body {
   }
 }
 
-
 .hero-unit h1 {
-  font-family: 'GothamRounded-Medium', 'Helvetica Neue', Helvetica, Arial,
+  font-family: "GothamRounded-Medium", "Helvetica Neue", Helvetica, Arial,
     sans-serif;
 }
 
